gatekeeper/constraint-disallow-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest
metadata:
  name: disallow-latest
spec:
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
